@@ -1144,6 +1144,9 @@ DWFILTER_FILTER_NAME=DokuWiki
 # MagentoFilter.java
 MAGENTOFILTER_FILTER_NAME=Magento CE Locale CSV
 
+# ILIASFilter.java
+ILIASFILTER_FILTER_NAME=ILIAS Language File
+
 # org.omegat.filters3.xml.opendoc.OpenDocFilter
 
 OpenDoc_FILTER_NAME=OpenDocument
